--- a/DestinoCerto/DestinoCerto/DestinoCerto.csproj
+++ b/DestinoCerto/DestinoCerto/DestinoCerto.csproj
@@ -141,7 +141,10 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\bootstrap.rtl.css" />
     <Content Include="Content\bootstrap.rtl.min.css" />
+    <Content Include="Content\RegisterError.css" />
     <Content Include="Content\Site.css" />
+    <Content Include="Content\Table.css" />
+    <Content Include="Content\UserMenu.css" />
     <Content Include="Default.aspx" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
